--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,10 @@
             android:onClick="syncPostNet"
     />
 
-
+    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
+        android:text="异步upString"
+        android:onClick="syncUpString"
+        />
 
 
 </LinearLayout>
