--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,5 +40,9 @@
         android:onClick="syncUpString"
         />
 
+    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
+        android:text="异步请求结果转javabean"
+        android:onClick="toJavaBean"
+        />
 
 </LinearLayout>
